Thu Apr 22 10:54:49 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReader_T.cpp:
          Resolved compile issue.

Thu Apr 22 10:32:16 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReaderStateListener_T.cpp:
          Check whether provided datareader is not nil. Also removed
          some unnecessary code from DataReaderStateListener_T.

        * connectors/dds4ccm/tests/Reader/Sender/Reader_Test_Sender_exec.cpp:
          Optimizated logging.

Thu Apr 22 09:11:14 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Get_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Read_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReader.cpp:
        * connectors/dds4ccm/impl/dds/DataReader_T.h:
        * connectors/dds4ccm/impl/dds/DataReader_T.cpp:
        * connectors/dds4ccm/impl/dds/Getter_T.h:
        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
        * connectors/dds4ccm/impl/dds/Reader_T.h:
        * connectors/dds4ccm/impl/dds/Reader_T.cpp:
          Created a type specific datareader proxy. This proxy
          manages the QueryConditions, ContentFilteredTopic and
          Readconditions for both the Getter, the reader and
          the listeners. This proxy is used in the ports.

        * connectors/dds4ccm/impl/dds/DataReaderListener.h:
        * connectors/dds4ccm/impl/dds/DataReaderListener.cpp:
        * connectors/dds4ccm/impl/dds/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/dds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_StateListen_T.h: