@@ -1,3 +1,9 @@
+Thu Apr 22 11:15:04 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Servants/Home_Servant_Impl_T.h:
+        * ciao/Servants/Servant_Impl_T.h:
+          Doxygen changes
+
 Thu Apr 22 10:54:49 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/dds/DataReader_T.cpp:
